fixes to about back button, wrapper, scroll visible

--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -6,8 +6,6 @@
 .scrollComponent {
   position: relative;
   max-height: 100vh;
-  max-width: 70%;
-  left: 15%;
 
   transition: $transitionIn;
   z-index: 10;
@@ -22,12 +20,6 @@
     opacity: 0;
     pointer-events: none;
     touch-action: none;
-  }
-
-  scrollbar-width: none;
-  -ms-overflow-style: none;
-  &::-webkit-scrollbar {
-    display: none;
   }
 
   .downArrow {
@@ -45,6 +37,13 @@
     font-family: $serif;
     font-size: $medHeaderFontSize;
   }
+
+  #aboutBack{
+    position: sticky;
+    border: none;
+    margin-left: 5%;
+    top: 50%;
+  }
 }
 
 .aboutSections {
@@ -53,22 +52,28 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  left: 20%;
   height: 100vh;
-  width: 70%;
+  width: 65%;
 
   scroll-snap-align: start;
 }
+
 
 @media screen and (max-width: 500px) {
   .scrollComponent {
     display: block;
     flex-wrap: wrap;
     max-width: 100%;
-    left: 13%;
     font-size: 3.5vw;
+
+    #aboutBack{
+      top: 20%;
+      margin-left: 5%;
+    }
   }
 
   .aboutSections {
-    max-width: 80%;
+    max-width: 70%;
   }
 }
